Source/cmGlobalMSYSMakefileGenerator.cxx
@@ -51,24 +51,12 @@ void cmGlobalMSYSMakefileGenerator::EnableLanguage(
   locations.push_back(makeloc);
   locations.push_back("/mingw/bin");
   locations.push_back("c:/mingw/bin");
-  std::string tgcc = cmSystemTools::FindProgram("gcc", locations);
-  std::string gcc = "gcc.exe";
-  if (!tgcc.empty()) {
-    gcc = tgcc;
-  }
-  std::string tgxx = cmSystemTools::FindProgram("g++", locations);
-  std::string gxx = "g++.exe";
-  if (!tgxx.empty()) {
-    gxx = tgxx;
-  }
   std::string trc = cmSystemTools::FindProgram("windres", locations);
   std::string rc = "windres.exe";
   if (!trc.empty()) {
     rc = trc;
   }
   mf->AddDefinition("MSYS", "1");
-  mf->AddDefinition("CMAKE_GENERATOR_CC", gcc);
-  mf->AddDefinition("CMAKE_GENERATOR_CXX", gxx);
   mf->AddDefinition("CMAKE_GENERATOR_RC", rc);
   this->cmGlobalUnixMakefileGenerator3::EnableLanguage(l, mf, optional);
 
